tests/ui/imports/import-from-missing-star-2.stderr
error[E0432]: unresolved import `spam`
  --> $DIR/import-from-missing-star-2.rs:2:9
   |
LL |     use spam::*;
   |         ^^^^ use of unresolved module or unlinked crate `spam`
   |
help: if you wanted to use a crate named `spam`, use `cargo add spam` to add it to your `Cargo.toml` and import it in your code
   |
LL + extern crate spam;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
